--- a/pages/stories/realstories.html
+++ b/pages/stories/realstories.html
@@ -131,7 +131,8 @@
             </ul>
         </div>
         <div class="footerBottom text-center pt-3">
-            <p>&copy; 2025 TheSaurus Industries. All rights reserved.</p>
+            <p>Copyright &copy;2025; Established by <span class="designer">TheSaurus</span> TheSaurus Industries
+                </p>
         </div>
     </footer>
 
